# syntonic

./: .gitignore  .readthedocs.yaml  AGENTS.md  AUTO_MINER_EXPANSION.md  BENCHMARK_RESULTS.md  CLAUDE.md  CUDA_OPTIMIZATION_STATUS.md  Cargo.toml  LICENSE-COMMERCIAL.md  LICENSE-RESEARCH.md  PURIFICATION_PROGRESS.md  README.md  RESONANT_TENSOR_UPGRADE.md  RETROCAUSAL_BENCHMARK_RESULTS.md  SOFTMAX_IMPLEMENTATION_SUMMARY.md  SRT_CRT_BACKEND_PLAN.md  TEST_ANALYSIS_REPORT.md  TEST_RESULTS.md  UNIFIED_FORMULAS_BY_DOMAIN.md  UNUSED_API_INTEGRATION_PLAN.md  benchmark_results.json  compile_kernels.py  compile_kernels.sh  cuda_implementation.md  debug_cuda.py  debug_softmax.py  fix_mpf.py  flickering-drifting-acorn.md  gpu_memory_benchmark.py  planVastStirringPuffin.prompt.md  pure_memory_benchmark.py  pyproject.toml  run_live_demo.py  srt_memory_benchmark.py  syntonic_viz_enhanced.jsx  temporal-plotting-creek copy.md  temporal-plotting-creek.md  test_attn_fix.py  test_grand_synthesis.py  test_resonant_matmul.py  (+6 more)
.opencode/: context.md  todo.md
benchmarks/: bench_core.py  benchmark_cpu_cuda.py  benchmark_results.json  complexity_analysis.md  comprehensive_benchmark.py  cuda_benchmark.py  performance_analysis.md  performance_optimization_plan.md  phase2_benchmarks.py  profile_cuda_kernels.py  theta_series_benchmark.py  transfer_benchmark.py
dashboard/: syntonic_console.html  syntonic_console_gemini.html
debug/: debug_cuda.py  debug_softmax.py  debug_test_env.py
demo/: run_live_demo.py
docs/: BACKEND_UTILIZATION_ANALYSIS.md  BMM_INTEGRATION_SUMMARY.md  IMPLEMENTATION_RECOMMENDATIONS.md  Makefile  README.md  RETROCAUSAL_RES_IMPLEMENTATION.md  RETROCAUSAL_RES_THEORY.md  SRT-ZERO.md  Syntonic_Roadmap_to_General_Computation.md  THEORY_COMPONENTS_IMPLEMENTATION_CHECKLIST.md  WINDING_NET_IMPLEMENTATION_PLAN.md  dhsr_reference.py  efficiency.md  glowing-swinging-hinton.md  requirements.txt  winding_nn.md
experiments/: syntonic_market_test.py
library_build_docs/: CUDA_IMPLEMENTATION.md  SYNTONIC_API_REFERENCE.md  SYNTONIC_CONTINUATION_PROMPT_v4.md  Syntonic_Phase_6_-_Applied_Sciences_Specification.md  Syntonic_Phase_7_-_Neural_Networks_Specification.md  golden_cone_report.md  implementation_state.md  phase1-spec.md  phase3-spec.md  phase6-spec.md  phase8-spec.md
python/: __init__.py
results/: results.md
rust/: Cargo.toml
rust/kernels/: attention.cu  attractor.cu  autograd.cu  compile_kernels.sh  complex_ops.cu  conv_ops.cu  core_ops.cu  corrections.cu  dgemm_native.cu  dhsr.cu  e8_projection.cu  elementwise.cu  gnosis.cu  golden_batch_norm.cu  golden_gelu.cu  golden_ops.cu  heat_kernel.cu  hierarchy.cu  matmul.cu  phi_residual.cu  prime_ops.cu  prime_selection.cu  reduction.cu  resonant_d.cu  scatter_gather_srt.cu  sedenion_ops.cu  sgemm_native.cu  srt_constants.cuh  syntonic_softmax.cu  trilinear.cu  winding_ops.cu  wmma_syntonic.cu
rust/kernels/ptx/: corrections_sm75.ptx  corrections_sm80.ptx  corrections_sm86.ptx  corrections_sm90.ptx  dhsr_sm75.ptx  dhsr_sm80.ptx  dhsr_sm86.ptx  dhsr_sm90.ptx  e8_projection_sm75.ptx  e8_projection_sm80.ptx  e8_projection_sm86.ptx  e8_projection_sm90.ptx  elementwise_sm75.ptx  elementwise_sm80.ptx  elementwise_sm86.ptx  elementwise_sm90.ptx  golden_ops_sm75.ptx  golden_ops_sm80.ptx  golden_ops_sm86.ptx  golden_ops_sm90.ptx  heat_kernel_sm75.ptx  heat_kernel_sm80.ptx  heat_kernel_sm86.ptx  heat_kernel_sm90.ptx
rust/scripts/: generate_srt_constants.rs
rust/src/: build.rs  gnosis.rs  golden_gelu.rs  hierarchy.rs  lib.rs  prime_selection.rs  spectral.rs  transcendence.rs  winding.rs
rust/src/exact/: constants.rs  golden.rs  mod.rs  rational.rs  symexpr.rs
rust/src/hypercomplex/: mod.rs  octonion.rs  quaternion.rs  sedenion.rs
rust/src/linalg/: matmul.rs  mod.rs
rust/src/resonant/: attractor.rs  crystallize.rs  e8_lattice.rs  e8_lattice_nn.rs  evolver.rs  golden_norm.rs  loss.rs  mod.rs  number_theory.rs  phi_ops.rs  py_wrappers.rs  retrocausal.rs  syntonic_softmax.rs  syntony.rs  tensor.rs
rust/src/symbolic/: constants.rs  expr.rs  golden.rs  mod.rs
rust/src/tensor/: broadcast.rs  causal_history.rs  conv.rs  data_loading.rs  linalg.rs  mod.rs  precision_policy.rs  py_data_loading.rs  py_srt_cuda_ops.rs  reduction.rs  srt_kernels.rs  srt_optimization.rs  storage.rs
rust/src/tensor/cuda/: async_transfer.rs  device_manager.rs  memory_pool.rs  mod.rs  multi_gpu.rs  srt_memory_protocol.rs
srt_zero/: HIERARCHY_BACKEND_SUMMARY.md  README.md  TEST_FIXES_SUMMARY.md  __init__.py  auto.py  backend.py  catalog.py  cli.py  config.py  constants.py  corrections.py  dhsr.py  engine.py  geometry.py  hierarchy.py  operators.py  validate.py  web_app.py
tests/: check_gnosis.py  conftest.py  debug_deep.py  debug_device.py  simple_test_convergence.py  test_basic_cuda.py  test_bmm_verification.py  test_convergence_benchmark.py  test_core_ops.py  test_cuda_cache.py  test_dhsr_minimal.py  test_gnosis.py  test_gnostic_shapes.py  test_gpu_support.py  test_kernel_compilation.py  test_linalg.py  test_neural_networks.py  test_pisano_transcendence.py  test_prime_selection.py  test_prime_theory.py  test_resonant_matmul.py  test_sedenion.py  test_srt_crt.py  test_srt_hierarchy_integration.py  test_srt_integration.py  test_srt_physics.py  test_syntonic_softmax_modes.py  (+2 more)
theory/: CRT.md  (+42 more)
(+396 files in other folders)
